--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "exe:portable": "electron-packager . phaser-electron-app-name --overwrite --out exe"
   },
   "dependencies": {
+    "electron-log": "^5.2.0",
     "phaser": "^3.60.0"
   },
   "devDependencies": {
